# hisp

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  all_bin_scenario.py  bin.py  environment.yml  example_reading_scenario_file.py  fw_sub_bins.py  helpers.py  iter_bins.py  make_iter_bins.py  mb_scenario.py  new_h_transport_class.py  plotting.ipynb  pyproject.toml  scenario.txt  scenario_test.txt  simple_mb.py
.github/workflows/: ci.yml
docs/: conf.py  environment.yml  index.rst
docs/source/: user_guide.rst
examples/: Wetted_Frac_Bin_Data.csv  all_bin_scenario.py  plotting.ipynb
examples/raw_data/angles_on_raised_div/: AnglesOnInnerDivertor.m  pf_matlab.txt  wetted_histo.py  x_matlab.txt
examples/raw_data/sol_simus/: PFC_loads.py
examples/raw_data/wdn-data/: i-wdn-0003-2481-00d-Ne.mrt.wall_flux  i-wdn-0003-2481-00g-Ne.mrt.wall_flux  i-wdn-0003-2481-00k-Ne.mrt.wall_flux  i-wdn-0003-2481-00m-Ne.mrt.wall_flux  i-wdn-0003-2481-01d-Ne.mrt.wall_flux  i-wdn-0003-2481-01g-Ne.mrt.wall_flux  i-wdn-0003-2481-01k-Ne.mrt.wall_flux  i-wdn-0003-2481-01m-Ne.mrt.wall_flux
src/hisp/: __init__.py  bin.py  festim_mb_model.py  h_transport_class.py  helpers.py  model.py  plotting.py  scenario.py  settings.py
src/hisp/data_binning/: bg_fluxes_avgofcases.py  bg_fluxes_binned.py  gdc.py  icwc.py  raised_sp.py
src/hisp/dina/: __init__.py  dina.py
src/hisp/festim_models/: __init__.py  mb_model.py
src/hisp/plamsa_data_handling/: __init__.py  main.py
test/: one_line_scenario.txt  test_bin.py  test_helpers.py  test_mb_model_festim.py  test_plasma_data_handling.py  test_pulse.py  test_scenario.py  test_scenario_python.py  wetted_test_data.csv
