[build-system]
requires = ["setuptools >= 61", "wheel", "setuptools-scm[toml] >= 7.0.5"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Kaelyn Dunnell" },
    { email = "kaelyn@mit.edu" },
]
dynamic = ["version"]
name = "HISP"
description = "Hydrogen Inventory Simulations of PFCs"
readme = "README/md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "h_transport_materials~=0.17",
    "festim@git+https://github.com/kaelyndunnell/FESTIM@9ac79df299171f12a57406755e441d8deb35c186"]

classifiers = [
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest >= 5.4.3", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/kaelyndunnell/hisp"
Issues = "https://github.com/kaelyndunnell/hisp/issues"


[tool.setuptools_scm]
write_to = "src/hisp/_version.py"
